//
//  ScrambledMessengerUITests.swift
//  ScrambledMessengerUITests
//
//  Created by Aleksander Makedonski on 11/29/17.
//  Copyright © 2017 Aleksander Makedonski. All rights reserved.
//

/**
import XCTest

@testable import Scrambled_Messenger

class ScrambledMessengerUITests: XCTestCase {
        
    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    /**
    func testTextInputProcess(){
        
        
        let app = XCUIApplication()
        
        let textView = app.otherElements.containing(.staticText, identifier:"Enter Text:").children(matching: .textView).element
                
        textView.tap()
        textView.typeText("The cats run quickly.")
        
      
        let totalNounsLabel = app.staticTexts["totalNouns"]
        let totalVerbsLabel = app.staticTexts["totalVerbs"]
        let totalAdverbsLabel = app.staticTexts["totalAdverbs"]
        
        XCTAssertNotNil(totalVerbsLabel, "Error: totalVerbs label not present")
        XCTAssertNotNil(totalVerbsLabel, "Error: totalAdverbs label not present")
        XCTAssertNotNil(totalVerbsLabel, "Error: totalNouns label not present")

        let submitButton = app.buttons["Submit"]
        submitButton.tap()
        
       
        

    }
    **/
    
}
 
 **/
